--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -16,37 +16,37 @@
     - name: "10:00 - 11:00 Praxis to Power Day 2 Introduction and logistics (*Zoom*)"
     - name: "11:00 - 2:00 Open Office Hours, SICSS-Howard/Mathematica Exclusive Content Review (on your own), or Pre-Arrival Material Review (on your own)
     
-              # Open Office Hours (*Zoom*)
+              - Open Office Hours (*Zoom*)
               
-              # Review Pre-arrival materials
+              - Review Pre-arrival materials
               
               - Bootcamp
               
-              - Day 1: Introduction and Ethic, Day 2: Collecting Digital Trace Data, Day 3: Automated Text Analysis, Day 4: Surveys in the Digital Age, Day 5: Mass collaboration and machine learning, & OPTIONAL Day 6: Experiments
+                - Day 1: Introduction and Ethic, Day 2: Collecting Digital Trace Data, Day 3: Automated Text Analysis, Day 4: Surveys in the Digital Age, Day 5: Mass collaboration and machine learning, & OPTIONAL Day 6: Experiments
               
-              - Bit by Bit by Matt Salganik (textbook) / (video interview about text for SICSS-Howard/Mathematica 2021)
+                - Bit by Bit by Matt Salganik [textbook](https://www.bitbybitbook.com/en/1st-ed/preface/) / (video interview about text for SICSS-Howard/Mathematica 2021)
               
-              # Get to know the SICSS & SICSS-Howard/Mathematica 2021 Inaugural Planning Team
+              - Get to know the SICSS & SICSS-Howard/Mathematica 2021 Inaugural Planning Team
               
-              - Terri Adams, Ph.D., Inaugural SICSS-H/M Faculty Co-Sponsor, Professor, Department  of Sociology and Criminology, and Interim Director, NOAA Cooperative Science Center for Atmospheric Sciences & Meteorology at Howard University (video)
+                - Terri Adams, Ph.D., Inaugural SICSS-H/M Faculty Co-Sponsor, Professor, Department  of Sociology and Criminology, and Interim Director, NOAA Cooperative Science Center for Atmospheric Sciences & Meteorology at Howard University (video)
               
-              - Bahiyyah Muhammad, Ph.D.,  Inaugural  SICSS-H/M Faculty Co-Sponsor, Associate Professor, Department of Sociology and Criminology, Howard University (video)
+                - Bahiyyah Muhammad, Ph.D.,  Inaugural  SICSS-H/M Faculty Co-Sponsor, Associate Professor, Department of Sociology and Criminology, Howard University (video)
               
-              - Calvin Hadley, Inaugural SICSS-H/M Event Co-Sponsor, Senior Advisor for Strategic Initiatives, Office of the President, Howard University (video)
+                - Calvin Hadley, Inaugural SICSS-H/M Event Co-Sponsor, Senior Advisor for Strategic Initiatives, Office of the President, Howard University (video)
               
-              - Akira Bell,  Inaugural SICSS-H/M Event Co-Sponsor, Senior Vice President; Chief Information Officer, Mathematica (video)
+                - Akira Bell,  Inaugural SICSS-H/M Event Co-Sponsor, Senior Vice President; Chief Information Officer, Mathematica (video)
               
-              - Naniette H. Coleman, Inaugural SICSS-H/M Organizer, SICSS-Princeton 2019 Alumna, PhD Candidate Sociology, UC Berkeley (video)
+                - Naniette H. Coleman, Inaugural SICSS-H/M Organizer, SICSS-Princeton 2019 Alumna, PhD Candidate Sociology, UC Berkeley (video)
               
-              # Changing the Game
+              - Changing the Game
               
-              - Reimagining Social Institutions: Higher Education (video)
+                - Reimagining Social Institutions: Higher Education (video)
               
-              - Diversity in Computational Social Science, SICSS Alumni Festival 2020 (video)
+                - Diversity in Computational Social Science, SICSS Alumni Festival 2020 (video)
               
-              - Uncovering New Keys to Countering Anti-Black Racism and Inequity Using Computational Social Science
+                - Uncovering New Keys to Countering Anti-Black Racism and Inequity Using Computational Social Science
               
-              - SICSS at 5 years old: An Interview with Co-Founders Chris Bail and Matt Salganik for SICSS-Howard/Mathematica 2021"
+                - SICSS at 5 years old: An Interview with Co-Founders Chris Bail and Matt Salganik for SICSS-Howard/Mathematica 2021"
     - name: "2:00 - 5:00 Making Computational Methods Accessible: data visualization with Jae Yeon Kim, Ph.D., Assistant Professor, Korea Development Institute School of Public Policy and Management [Workshop materials](https://github.com/jaeyk/sicss-howard-r-boot-camp) (*Zoom*)"
     - name: "5:00 - 5:15 Break"
     - name: "5:15 - 6:15 SICSS-Howard/Mathematica Kick-off and Opening Plenary: President Wayne A.I. Frederick, Howard University (*Zoom*)"
