--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -42,6 +42,8 @@
               
               - Reimagining Social Institutions: Higher Education (video)
               
+              - Black in AI board member panel for SICSS-Howard/Mathematica 2021
+              
               - Diversity in Computational Social Science, SICSS Alumni Festival 2020 (video)
               
               - Uncovering New Keys to Countering Anti-Black Racism and Inequity Using Computational Social Science
