--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -16,17 +16,17 @@
     - name: "10:00 - 11:00 Praxis to Power Day 2 Introduction and logistics (*Zoom*)"
     - name: "11:00 - 2:00 Open Office Hours, SICSS-Howard/Mathematica Exclusive Content Review (on your own), or Pre-Arrival Material Review (on your own)
     
-              - Open Office Hours (*Zoom*)
+             **Open Office Hours (*Zoom*)**
               
-              - Review Pre-arrival materials
+             **Review Pre-arrival materials**
               
-              - Bootcamp
+                - Bootcamp
               
-                - Day 1: Introduction and Ethic, Day 2: Collecting Digital Trace Data, Day 3: Automated Text Analysis, Day 4: Surveys in the Digital Age, Day 5: Mass collaboration and machine learning, & OPTIONAL Day 6: Experiments
+                - Day 1: Introduction and Ethics, Day 2: Collecting Digital Trace Data, Day 3: Automated Text Analysis, Day 4: Surveys in the Digital Age, Day 5: Mass collaboration and machine learning, & OPTIONAL Day 6: Experiments
               
                 - Bit by Bit by Matt Salganik [textbook](https://www.bitbybitbook.com/en/1st-ed/preface/) / (video interview about text for SICSS-Howard/Mathematica 2021)
               
-              - Get to know the SICSS & SICSS-Howard/Mathematica 2021 Inaugural Planning Team
+             **Get to know the SICSS & SICSS-Howard/Mathematica 2021 Inaugural Planning Team**
               
                 - Terri Adams, Ph.D., Inaugural SICSS-H/M Faculty Co-Sponsor, Professor, Department  of Sociology and Criminology, and Interim Director, NOAA Cooperative Science Center for Atmospheric Sciences & Meteorology at Howard University (video)
               
@@ -38,7 +38,7 @@
               
                 - Naniette H. Coleman, Inaugural SICSS-H/M Organizer, SICSS-Princeton 2019 Alumna, PhD Candidate Sociology, UC Berkeley (video)
               
-              - Changing the Game
+              **Changing the Game**
               
                 - Reimagining Social Institutions: Higher Education (video)
               
