--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -14,7 +14,7 @@
   name: Praxis to Power Pre-Institute
   events:
     - name: "10:00 - 11:00 Praxis to Power Day 2 Introduction and logistics (*Zoom*)"
-    - name: "11:00 - 2:00 Open Office Hours, SICSS-Howard/Mathematica Exclusive Content Review (on your own), or Pre-Arrival Material Review (on your own)
+    - name: "11:00 - 2:00 Open Office Hours, or SICSS-Howard/Mathematica Exclusive Content Review (on your own), or Pre-Arrival Material Review (on your own)
     
              **Open Office Hours (*Zoom*)**
               
