--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -15,14 +15,23 @@
   events:
     - name: "10:00 - 11:00 Praxis to Power Day 2 Introduction and logistics (*Zoom*)"
     - name: "11:00 - 2:00 Open Office Hours, or SICSS-Howard/Mathematica Exclusive Content Review (on your own), or Pre-Arrival Material Review (on your own)
-    - name: "Open Office Hours (*Zoom*)"
-    - name: "Review Pre-arrival materials
+    
+    
+          **Open Office Hours (*Zoom*)**
+    
+    
+          **Review Pre-arrival materials**
+          
+          
                 - Bootcamp
               
                 - Day 1: Introduction and Ethics, Day 2: Collecting Digital Trace Data, Day 3: Automated Text Analysis, Day 4: Surveys in the Digital Age, Day 5: Mass collaboration and machine learning, & OPTIONAL Day 6: Experiments
               
-                - Bit by Bit by Matt Salganik [textbook](https://www.bitbybitbook.com/en/1st-ed/preface/) / (video interview about text for SICSS-Howard/Mathematica 2021)"
-    - name: "Get to know the SICSS & SICSS-Howard/Mathematica 2021 Inaugural Planning Team:
+                - Bit by Bit by Matt Salganik [textbook](https://www.bitbybitbook.com/en/1st-ed/preface/) / (video interview about text for SICSS-Howard/Mathematica 2021)
+                
+                
+          **Get to know the SICSS & SICSS-Howard/Mathematica 2021 Inaugural Planning Team**
+          
               
                 - Terri Adams, Ph.D., Inaugural SICSS-H/M Faculty Co-Sponsor, Professor, Department  of Sociology and Criminology, and Interim Director, NOAA Cooperative Science Center for Atmospheric Sciences & Meteorology at Howard University (video)
               
@@ -32,8 +41,11 @@
               
                 - Akira Bell,  Inaugural SICSS-H/M Event Co-Sponsor, Senior Vice President; Chief Information Officer, Mathematica (video)
               
-                - Naniette H. Coleman, Inaugural SICSS-H/M Organizer, SICSS-Princeton 2019 Alumna, PhD Candidate Sociology, UC Berkeley (video)"
-    - name: "Changing the Game
+                - Naniette H. Coleman, Inaugural SICSS-H/M Organizer, SICSS-Princeton 2019 Alumna, PhD Candidate Sociology, UC Berkeley (video)
+                
+                
+          **Changing the Game**
+          
               
                 - Reimagining Social Institutions: Higher Education (video)
               
