--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -24,9 +24,9 @@
           **Review Pre-arrival materials**
          
           
-                - Bootcamp
+                - [Bootcamp](https://sicss.io/boot_camp/)
               
-                - Day 1: Introduction and Ethics, Day 2: Collecting Digital Trace Data, Day 3: Automated Text Analysis, Day 4: Surveys in the Digital Age, Day 5: Mass collaboration and machine learning, & OPTIONAL Day 6: Experiments
+                - [Day 1: Introduction and Ethics, Day 2: Collecting Digital Trace Data, Day 3: Automated Text Analysis, Day 4: Surveys in the Digital Age, Day 5: Mass collaboration and machine learning, & OPTIONAL Day 6: Experiments](https://sicss.io/curriculum)
               
                 - Bit by Bit by Matt Salganik [textbook](https://www.bitbybitbook.com/en/1st-ed/preface/) / (video interview about text for SICSS-Howard/Mathematica 2021)
                 
@@ -45,6 +45,7 @@
               
                 - Naniette H. Coleman, Inaugural SICSS-H/M Organizer, SICSS-Princeton 2019 Alumna, PhD Candidate Sociology, UC Berkeley (video)
                 
+                - SICSS at 5 years old: An Interview with Co-Founders Chris Bail and Matt Salganik for SICSS-Howard/Mathematica 2021 (video)
                 
                 
           **Changing the Game**
@@ -52,11 +53,10 @@
               
                 - Reimagining Social Institutions: Higher Education (video)
               
-                - Diversity in Computational Social Science, SICSS Alumni Festival 2020 (video)
+                - Discussion on Diversity in Computational Social Science, SICSS Alumni Festival 2020 [video](https://www.youtube.com/watch?v=FYES4RCRaZw&t=2s)
               
-                - Uncovering New Keys to Countering Anti-Black Racism and Inequity Using Computational Social Science
-              
-                - SICSS at 5 years old: An Interview with Co-Founders Chris Bail and Matt Salganik for SICSS-Howard/Mathematica 2021"
+                - Uncovering New Keys to Countering Anti-Black Racism and Inequity Using Computational Social Science, [SAGE Ocean blog](https://ocean.sagepub.com/blog/diversity/uncovering-new-keys-to-countering-anti-black-racism-and-inequity-using-computational-social-science)
+             
     - name: "2:00 - 5:00 Making Computational Methods Accessible: data visualization with Jae Yeon Kim, Ph.D., Assistant Professor, Korea Development Institute School of Public Policy and Management [Workshop materials](https://github.com/jaeyk/sicss-howard-r-boot-camp) (*Zoom*)"
     - name: "5:00 - 5:15 Break"
     - name: "5:15 - 6:15 SICSS-Howard/Mathematica Kick-off and Opening Plenary: President Wayne A.I. Frederick, Howard University (*Zoom*)"
