--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -28,30 +28,30 @@
               
                 - [Day 1: Introduction and Ethics, Day 2: Collecting Digital Trace Data, Day 3: Automated Text Analysis, Day 4: Surveys in the Digital Age, Day 5: Mass collaboration and machine learning, & OPTIONAL Day 6: Experiments](https://sicss.io/curriculum)
               
-                - Bit by Bit by Matt Salganik [textbook](https://www.bitbybitbook.com/en/1st-ed/preface/) / (video interview about text for SICSS-Howard/Mathematica 2021)
+                - Bit by Bit by Matt Salganik [textbook](https://www.bitbybitbook.com/en/1st-ed/preface/) / [video interview about text for SICSS-Howard/Mathematica 2021](https://youtu.be/jl__M596Crs)
                 
                 
                 
           **Get to know the SICSS & SICSS-Howard/Mathematica 2021 Inaugural Planning Team**
           
               
-                - Terri Adams, Ph.D., Inaugural SICSS-H/M Faculty Co-Sponsor, Professor, Department  of Sociology and Criminology, and Interim Director, NOAA Cooperative Science Center for Atmospheric Sciences & Meteorology at Howard University (video)
+                - Terri Adams, Ph.D., Inaugural SICSS-H/M Faculty Co-Sponsor, Professor, Department  of Sociology and Criminology, and Interim Director, NOAA Cooperative Science Center for Atmospheric Sciences & Meteorology at Howard University [video](https://youtu.be/2R_w-PQbPD0)
               
-                - Bahiyyah Muhammad, Ph.D.,  Inaugural  SICSS-H/M Faculty Co-Sponsor, Associate Professor, Department of Sociology and Criminology, Howard University (video)
+                - Bahiyyah Muhammad, Ph.D.,  Inaugural  SICSS-H/M Faculty Co-Sponsor, Associate Professor, Department of Sociology and Criminology, Howard University [video](https://youtu.be/2WRhoRgmvvc)
               
-                - Calvin Hadley, Inaugural SICSS-H/M Event Co-Sponsor, Senior Advisor for Strategic Initiatives, Office of the President, Howard University (video)
+                - Calvin Hadley, Inaugural SICSS-H/M Event Co-Sponsor, Senior Advisor for Strategic Initiatives, Office of the President, Howard University [video](https://youtu.be/y-dp19EpEcU)
               
-                - Akira Bell,  Inaugural SICSS-H/M Event Co-Sponsor, Senior Vice President; Chief Information Officer, Mathematica (video)
+                - Akira Bell,  Inaugural SICSS-H/M Event Co-Sponsor, Senior Vice President; Chief Information Officer, Mathematica [video](https://youtu.be/BVRDqmDMT-0)
               
                 - Naniette H. Coleman, Inaugural SICSS-H/M Organizer, SICSS-Princeton 2019 Alumna, PhD Candidate Sociology, UC Berkeley (video)
                 
-                - SICSS at 5 years old: An Interview with Co-Founders Chris Bail and Matt Salganik for SICSS-Howard/Mathematica 2021 (video)
+                - SICSS at Age 5: An Interview with Co-Founders Chris Bail and Matt Salganik for SICSS-Howard/Mathematica 2021 [video](https://youtu.be/PGhI39loSYg)
                 
                 
           **Changing the Game**
           
               
-                - Reimagining Social Institutions: Higher Education (video)
+                - Reimagining Social Institutions: Higher Education, an SSRC panel moderated by Alondra Nelson, Ph.D. [video](https://youtu.be/PdsdS4wnaG4)
               
                 - Discussion on Diversity in Computational Social Science, SICSS Alumni Festival 2020 [video](https://www.youtube.com/watch?v=FYES4RCRaZw&t=2s)
               
