--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -52,6 +52,8 @@
           
               
                 - Reimagining Social Institutions: Higher Education, an SSRC panel moderated by Alondra Nelson, Ph.D. [video](https://youtu.be/PdsdS4wnaG4)
+                
+                - Black in AI, board member panel [video](https://youtu.be/uUyNd3yjTv8)
               
                 - Discussion on Diversity in Computational Social Science, SICSS Alumni Festival 2020 [video](https://www.youtube.com/watch?v=FYES4RCRaZw&t=2s)
               
