--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -43,7 +43,7 @@
               
                 - Akira Bell,  Inaugural SICSS-H/M Event Co-Sponsor, Senior Vice President; Chief Information Officer, Mathematica [video](https://youtu.be/BVRDqmDMT-0)
               
-                - Naniette H. Coleman, Inaugural SICSS-H/M Organizer, SICSS-Princeton 2019 Alumna, PhD Candidate Sociology, UC Berkeley (video)
+                - Naniette H. Coleman, Inaugural SICSS-H/M Organizer, SICSS-Princeton 2019 Alumna, PhD Candidate Sociology, UC Berkeley [website](https://www.naniettecoleman.com/)
                 
                 - SICSS at Age 5: An Interview with Co-Founders Chris Bail and Matt Salganik for SICSS-Howard/Mathematica 2021 [video](https://youtu.be/PGhI39loSYg)
                 
