--- a/_data/2021/hse/teaching_assistants.yml
+++ b/_data/2021/hse/teaching_assistants.yml
@@ -1,9 +1,9 @@
-- name: Anastasia Karpova
-  bio: "Anastasia is currently pursuing her master degree in data science from Higher school of economics (HSE). She was a teaching assistant for many statistical and data science courses at HSE. She is interested in computational methods in macroeconomics, marketing and social sciences."
-  image: /assets/images/Karpova.jpg
-  website: https://www.facebook.com/asyakarpovaa
-  
 - name: Alex Knorre
   bio: "Alex Knorre is a Ph.D. student in Criminology at the University of Pennsylvania. He is also an affiliated researcher for the Institute for the Rule of Law at the European University at Saint Petersburg. Alex is interested in illegal online drug markets, gun violence, and Russian criminal justice, and extensively uses R for his research."
   image: /assets/images/knorre.png
   website: https://twitter.com/Kilexus
+
+- name: Saydash Miftakhov
+  bio: "Saydash entered the Skoltech Masters program in Data Science after finishing the joint bachelor's program of Higher School of Economics (HSE) and New Economic School (NES). He was a teaching assistant for many mathematical and data science courses at HSE and NES. He is interested in machine learning and its implications for solving real-world problems."
+  image: /assets/images/Miftakhov.jpg
+  website: https://www.facebook.com/saidashmiftakhov/ 
