--- a/_data/2021/law/teaching_assistants.yml
+++ b/_data/2021/law/teaching_assistants.yml
@@ -1,7 +1,7 @@
 - name: Bogdan Covrig
   image: /assets/images/CovrigB.jpg
   bio: "Bogdan Covrig is a Research Assistant at the Maastricht Law&Tech Lab (Maastricht University). He is currently following a computer science bachelor degree (Saxion University), which contributes to the interdisciplinary research conducted at the Lab. He is passionate about building infrastructures that support the development of digital legal frameworks. His research interests include human computer interaction (HCI) from the perspective of user behavior and consumer protection. In particular, his current projects focus on social media consumer profiling and influencing, as well as the impact of recommender systems on the commercial activities of influencers/content creators."
-  website: https://www.linkedin.com/in/bogdancovrig/
+  website: https://poly.covrig.dev/
 
 - name: Thales Bertaglia
   image: /assets/images/BertagliaThales.JPG
