--- a/_data/2021/hse/schedule.yml
+++ b/_data/2021/hse/schedule.yml
@@ -1,4 +1,4 @@
-- date: This is a preliminary program, some details are subject to change. All times are in Central European Time.
+- date: All times are in [Central European Summer Time](https://www.timeanddate.com/time/zones/cest)
 
 - date: 2021-06-13
   events:
