--- a/_data/2021/hse/schedule.yml
+++ b/_data/2021/hse/schedule.yml
@@ -1,4 +1,4 @@
-- date: All times are in [Central European Summer Time](https://www.timeanddate.com/time/zones/cest)
+- date: All times are in Central European Summer Time, https://www.timeanddate.com/time/zones/cest
 
 - date: 2021-06-13
   events:
