--- a/_data/2021/beijing/schedule.yml
+++ b/_data/2021/beijing/schedule.yml
@@ -6,14 +6,14 @@
     - name: "8:00 - 8:25 Introduction and logistics"
     - name: "8:30 - 9:25 Speed dating"
     - name: "9:30 - 10:55 Reading group: Introduction to networks"
-    - name: "21:00 - 22:30 Sandy Pentland speaks at SICSS Beijing + Q&A"
+    - name: "21:00 - 22:30 Sandy Pentland speaks at SICSS Beijing + Q&A (registration link TBA)"
 
 - date: 2021-06-15
   name: ""
   events:
     - name: "8:30 - 9:25 Speed dating"
     - name: "9:30 - 10:55 Reading group: Machine learning and networks"
-    - name: "21:00 - 22:30 Shan Huang speaks at SICSS Beijing + Q&A"
+    - name: "21:00 - 22:00 Subhayan Mukerjee speaks at SICSS Beijing + Q&A (open to participants only)"
 
 - date: 2021-06-16
   name: ""
@@ -33,7 +33,7 @@
   name: ""
   events:
     - name: "8:30 - 9:55 Group project research idea pitch"
-    - name: "10:00 - 11:55 Zhiyuan Liu speaks at SICSS Beijing + 1:1 meetings"
+    - name: "10:00 - 11:55 Zhiyuan Liu speaks at SICSS Beijing + 1:1 meetings (registration link TBA)"
     - name: "21:00 - 23:00 Groups formed for the second week research team projects"
 
 - date: 2021-06-19
