--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -53,15 +53,15 @@
           
                 - SICSS at Age 5: An Interview with Co-Founders Chris Bail and Matt Salganik for SICSS-Howard/Mathematica 2021 [(video)](https://youtu.be/PGhI39loSYg)
               
-                - Terri Adams, Ph.D., Inaugural SICSS-H/M Faculty Co-Sponsor, Professor, Department  of Sociology and Criminology, and Interim Director, NOAA Cooperative Science Center for Atmospheric Sciences & Meteorology at Howard University [(video)](https://youtu.be/2R_w-PQbPD0)
+                - Terri Adams, Ph.D., Faculty Co-Sponsor & Professor, Department  of Sociology and Criminology, and Interim Director, NOAA Cooperative Science Center for Atmospheric Sciences & Meteorology at Howard University [(video)](https://youtu.be/2R_w-PQbPD0)
               
-                - Bahiyyah Muhammad, Ph.D.,  Inaugural  SICSS-H/M Faculty Co-Sponsor, Associate Professor, Department of Sociology and Criminology, Howard University [(video)](https://youtu.be/2WRhoRgmvvc)
+                - Bahiyyah Muhammad, Ph.D.,  Faculty Co-Sponsor & Associate Professor, Department of Sociology and Criminology, Howard University [(video)](https://youtu.be/2WRhoRgmvvc)
               
-                - Calvin Hadley, Inaugural SICSS-H/M Event Co-Sponsor, Senior Advisor for Strategic Initiatives, Office of the President, Howard University [[video)](https://youtu.be/y-dp19EpEcU)]
+                - Calvin Hadley, Event Co-Sponsor & Senior Advisor for Strategic Initiatives, Office of the President, Howard University [[video)](https://youtu.be/y-dp19EpEcU)]
               
-                - Akira Bell,  Inaugural SICSS-H/M Event Co-Sponsor, Senior Vice President; Chief Information Officer, Mathematica [(video)](https://youtu.be/BVRDqmDMT-0)
+                - Akira Bell,  Event Co-Sponsor & Senior Vice President; Chief Information Officer, Mathematica [(video)](https://youtu.be/BVRDqmDMT-0)
               
-                - Naniette H. Coleman, Inaugural SICSS-H/M Organizer, SICSS-Princeton 2019 Alumna, PhD Candidate Sociology, UC Berkeley [(website)](https://www.naniettecoleman.com/)
+                - Naniette H. Coleman, Lead Organizer & SICSS-Princeton 2019 Alumna, PhD Candidate Sociology, UC Berkeley [(website)](https://www.naniettecoleman.com/)
                 
               
               
