--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -156,7 +156,7 @@
     - name: "3:15 - 3:30 Whole group debrief about group exercise (*Zoom*) (video)"
     - name: "3:30 - 3:45 Debrief and logistics (*Zoom*) (video)"
     - name: "3:45 - 4:00 [Delete](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day5-mass-collaboration/activity/lesson_plan_masscollaboration_participant.md#deleting-the-files-after-use) the Fragile Families data from your computer"
-    - name: "4:00 - 5:00 Data assurance checks (*Zoom*)"
+    - name: "4:00 - 5:00 Final data assurance checks (*Zoom*)"
 
 - date: 2021-06-19
   name: Day off
