--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -3,7 +3,7 @@
 - date: 2021-06-12
   name: Praxis to Power Pre-Institute
   events: 
-    - name: "10:00 - 11:45 Welcome, Praxis to Power Day 1 Introduction and logistics" (*Zoom*)
+    - name: "10:00 - 11:45 Welcome, Praxis to Power Day 1 Introduction and logistics (*Zoom*)"
     - name: "11:45 - 12:00 Break"
     - name: '12:00 - 1:00 "Personal Experiences of African Americans in the Academy" (*Zoom*) 
     
