--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -23,7 +23,7 @@
     - name: "1:45 - 2:00 Break"
     - name: '2:00 - 5:00 "Making Computational Methods Accessible: R big picture (tidyverse) + data wrangling" (*Zoom*) (video) [(Workshop materials)](https://github.com/jaeyk/sicss-howard-r-boot-camp)
     
-      - Jae Yeon Kim, Ph.D., Assistant Professor, Korea Development Institute School of Public Policy and Management'
+      - Jae Yeon Kim, Ph.D., Assistant Research Scholar, SNF Agora Institute, Johns Hopkins University'
 
 - date: 2021-06-13
   name: Praxis to Power Pre-Institute
@@ -79,7 +79,7 @@
              
     - name: '2:00 - 5:00 "Making Computational Methods Accessible: data visualization and teaching CSS" (*Zoom*) [Workshop materials](https://github.com/jaeyk/sicss-howard-r-boot-camp)
     
-      - Jae Yeon Kim, Ph.D., Assistant Professor, Korea Development Institute School of Public Policy and Management'
+      - Jae Yeon Kim, Ph.D., Assistant Research Scholar, SNF Agora Institute, Johns Hopkins University'
       
     - name: "5:00 - 5:15 Break"
     - name: "5:15 - 6:15 SICSS-Howard/Mathematica Kick-off and Opening Plenary: President Wayne A.I. Frederick, Howard University (*Zoom*) (video)"
