updating SICSS-Princeton schedule

--- a/_data/2021/princeton/schedule.yml
+++ b/_data/2021/princeton/schedule.yml
@@ -2,7 +2,7 @@
 
 - date: 2021-06-13
   events:
-    - name: "5:00 - 6:00pm Meet-and-greet (*Zoom*)"
+    - name: "5:00 - 6:00pm Meet-and-greet (*Zoom*) (you have received the link over email)"
 
 - date: 2021-06-14
   name: Introduction and Ethics
