--- a/_data/2021/lisbon/participants.yml
+++ b/_data/2021/lisbon/participants.yml
@@ -51,7 +51,7 @@
 - name: Mohammad Ali 
   image: /assets/images/Ali_SICSS.JPG
   bio: "Mohammad Ali is a doctoral candidate in Mass Communications at the S.I. Newhouse School of Public Communications, Syracuse University, United States. The areas of his research include strategic communication using both social science and computational research methods. As a Computational Social Science (CSS) researcher, his work involves both the quantitative and qualitative approaches with a combination of data science methods. Specifically, his research foci include brand crisis, brand-consumer interaction, visual messages, fake news, persuasion, social media, news media credibility, and Artificial Intelligence. A former journalist in Bangladesh, Ali received his M.A. in Communication at The University of Texas at Tyler, USA. He also has another master's degree and a bachelor's degree in Public Administration at the University of Dhaka, Bangladesh. Ali has published and presented his research works in reputed journals and conferences, including Association for Education in Journalism and Mass Communication (AEJMC) and International Communication Association (ICA)."
-  website: http://mohdyousufali.syr.edu/
+  website: 
  
 - name: Seliem El-Sayed  
   image: /assets/images/ElSayed_Photo.jpeg
